--- a/index.html
+++ b/index.html
@@ -1,78 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
+<head>
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>AutoJailbreak</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800&display=swap"
-      rel="stylesheet"
-    />
+    <link href="data:image/x-icon;base64," rel="icon" type="image/x-icon" />
+    <link href="https://fonts.googleapis.com" rel="preconnect" />
+    <link href="https://fonts.gstatic.com" rel="preconnect" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=JetBrains+Mono:wght@400;700&display=swap" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <style type="text/tailwindcss">
-      @layer base {
         :root {
-          --primary-500: #0d80f2;
-          --primary-600: #0a69c4;
-          --green-400: #4ade80;
-          --green-500: #22c55e;
-          --yellow-400: #facc15;
-          --yellow-500: #eab308;
-          --red-400: #f87171;
-          --red-500: #ef4444;
-          --neutral-100: #f5f5f5;
-          --neutral-400: #9cabba;
-          --neutral-600: #525252;
-          --neutral-700: #283039;
-          --neutral-800: #1a1e24;
-          --neutral-900: #111418;
+            --primary-500: #0d80f2;
+            --primary-600: #0a69c4;
+            --neutral-100: #ffffff;
+            --neutral-300: #d4d4d4;
+            --neutral-400: #9cabba;
+            --neutral-500: #737373;
+            --neutral-600: #525252;
+            --neutral-700: #283039;
+            --neutral-800: #1a1e24;
+            --neutral-900: #111418;
         }
         body {
-          font-family: 'Inter', sans-serif;
+            font-family: 'Inter', sans-serif;
         }
-      }
-      @layer utilities {
+        .font-mono {
+            font-family: 'JetBrains Mono', monospace;
+        }
         @keyframes fade-in {
-          from { opacity: 0; transform: translateY(10px); }
-          to { opacity: 1; transform: translateY(0); }
+            from { opacity: 0; transform: translateY(10px); }
+            to { opacity: 1; transform: translateY(0); }
+        }
+        @keyframes fade-in-fast {
+            from { opacity: 0; }
+            to { opacity: 1; }
         }
         .animate-fade-in {
-          animation: fade-in 0.5s ease-out forwards;
+            animation: fade-in 0.5s ease-out forwards;
+        }
+        .animate-fade-in-fast {
+            animation: fade-in-fast 0.2s ease-out forwards;
         }
         @keyframes notification-enter {
-          from { opacity: 0; transform: translateX(100%); }
-          to { opacity: 1; transform: translateX(0); }
+            from { opacity: 0; transform: translateX(100%); }
+            to { opacity: 1; transform: translateX(0); }
         }
         @keyframes notification-exit {
-          from { opacity: 1; transform: translateX(0); }
-          to { opacity: 0; transform: translateX(100%); }
+            from { opacity: 1; transform: translateX(0); }
+            to { opacity: 0; transform: translateX(100%); }
         }
         .animate-notification-enter {
-          animation: notification-enter 0.3s ease-out forwards;
+            animation: notification-enter 0.3s ease-out forwards;
         }
         .animate-notification-exit {
-          animation: notification-exit 0.3s ease-out forwards;
+            animation: notification-exit 0.3s ease-in forwards;
         }
-      }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "react-dom/client": "https://aistudiocdn.com/react-dom@^18.2.0/client",
-    "react-dom": "https://aistudiocdn.com/react-dom@^18.2.0",
-    "react": "https://aistudiocdn.com/react@^18.2.0",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.11.0",
-    "rxjs": "https://aistudiocdn.com/rxjs@^7.8.1",
-    "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
-    "react/": "https://aistudiocdn.com/react@^18.2.0/"
-  }
-}
-</script>
 </head>
-  <body class="bg-[var(--neutral-900)] text-[var(--neutral-100)] antialiased">
+<body class="bg-[var(--neutral-900)] text-[var(--neutral-100)]">
     <div id="root"></div>
-    <script type="module" src="/index.tsx"></script>
-  </body>
+    <script type="importmap">
+    {
+      "imports": {
+        "react": "https://aistudiocdn.com/react@^18.2.0",
+        "react-dom/": "https://aistudiocdn.com/react-dom@^18.2.0/",
+        "react/": "https://aistudiocdn.com/react@^18.2.0/",
+        "@google/genai": "https://aistudiocdn.com/@google/genai@^1.28.0"
+      }
+    }
+    </script>
+    <script type="module" src="./index.tsx"></script>
+</body>
 </html>
